php-github backend
Allows for wwwsqldesigner models to be pushed to github in XML format
via github API

Rename config/config.php.dst to config/config.php
Then adjust configuration with yours, with API keys

Heroku will require index.php I think….if you want to use that.

--- a/index.html
+++ b/index.html
@@ -161,6 +161,8 @@
 						<fieldset>
 							<legend id="server"></legend>
 							<label for="backend" id="backendlabel"></label> <select id="backend"><option></option></select>
+							<br />
+							<label for="github" id="githublabel"><a onclick="javascript:window.open('backend/php-github/?action=request_authorization', '_blank', 'menubar=0,toolbar=0,resizeable=1,height=500,width=800,left=200,top=200');" href="#">Configure GitHub</a></label>
 							<hr/>
 							<input type="button" id="serversave" /> 
 							<input type="button" id="quicksave" /> 
